After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756449 - GtkTextHandle artifacts under Wayland
GtkTextHandle artifacts under Wayland
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-10-12 16:15 UTC by Matthias Clasen
Modified: 2015-10-13 00:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
popover: Invalidate borders on tail position changes (3.52 KB, patch)
2015-10-12 22:32 UTC, Carlos Garnacho
none Details | Review
popover: Invalidate borders on tail position changes (3.60 KB, patch)
2015-10-12 23:13 UTC, Carlos Garnacho
committed Details | Review

Description Matthias Clasen 2015-10-12 16:15:06 UTC
I just saw artifacts when using the loupe under wayland, and moving the touch back and forth towards the edge of the window - the 'spike' gets duplicated more and more. Unfortunately, taking a screenshot currently crashes the shell, so no screenshot.
Comment 1 Carlos Garnacho 2015-10-12 16:39:34 UTC
Yeah. also saw this when changing the position type on regular popovers through the inspector. Looks like we don't invalidate the border around the popover properly. I started looking the other day into removing these borders altogether, there would be always one side to invalidate though.
Comment 2 Carlos Garnacho 2015-10-12 22:32:36 UTC
Created attachment 313148 [details] [review]
popover: Invalidate borders on tail position changes

There's nothing doing this explicitly, so tail position changes may
leave trails of older positions.
Comment 3 Carlos Garnacho 2015-10-12 23:13:19 UTC
Created attachment 313151 [details] [review]
popover: Invalidate borders on tail position changes

There's nothing doing this explicitly, so tail position changes may
leave trails of older positions.
Comment 4 Carlos Garnacho 2015-10-13 00:13:18 UTC
Attachment 313151 [details] pushed as d8e41e1 - popover: Invalidate borders on tail position changes